# krait

./: .pre-commit-config.yaml  404.html  demo_test copy 2.py  demo_test copy.py  demo_test.py  index.html  license  notes.xopp  objects.inv  pyproject.toml  snap4frame.log.2025-02-19  test2.py
.config/: backstage-info.yml  cspell.config.yaml
.github/scripts/: parse4tag.py
.github/workflows/: publish-package.yml  release-package.yml
referince/: signal.html
scripts/: versioning.py
search/: search_index.js  search_index.json
