[project]
name = "krait"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    # all dependencies here
    "importlib-metadata>=8.5.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
ci = ["packaging", "tomlkit"]
all = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = [
    "/packages/package/src/krait",
    "/packages/path/src/krait",
    "/packages/signal/src/krait",
    # more packages here
]

[tool.ruff.lint]
extend-select = ["C", "N", "SIM", "PTH", "I", "PL", "FURB"]
